--- a/examples/src/main/webapp/helloWorld.xhtml
+++ b/examples/src/main/webapp/helloWorld.xhtml
@@ -23,7 +23,7 @@
                 <grv:testcomponent />
                 <h:message id="message1" for="input1" />
                 <h:outputFormat value="#{testbean.xxx}"/>
-               
+                <h:outputFormat value="#{javatestbean.sayHello}"/>
                         <h:commandButton value="Press me dynamic" action="#{testbean.doit}"/>
                         
             </h:panelGrid>
