https://issues.apache.org/jira/browse/EXTSCRIPT-3 added documentation added a tighter convenience method behavior
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@809922 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/src/main/webapp/helloWorld.xhtml
+++ b/examples/src/main/webapp/helloWorld.xhtml
@@ -1,30 +1,27 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:grv="http://myfaces.apache.org/groovy"    >
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns = "http://www.w3.org/1999/xhtml" xmlns:ui = "http://java.sun.com/jsf/facelets"
+      xmlns:f = "http://java.sun.com/jsf/core" xmlns:h = "http://java.sun.com/jsf/html"
+      xmlns:grv = "http://myfaces.apache.org/groovy">
 <head>
 <title>Hello World</title>
 </head>
 <body>
-<ui:composition template="/template.xhtml">
+<ui:composition template = "/template.xhtml">
 
-	<ui:define name="body">
-		<h:form id="form">
-			<h:panelGrid id="grid" columns="2">
-				<h:outputText id="output1" value="Please enter your name" />
-				<h:inputText id="input1" value="#{helloWorld.name}"
-					required="true" >
+	<ui:define name = "body">
+		<h:form id = "form">
+			<h:panelGrid id = "grid" columns = "2">
+				<h:outputText id = "output1" value = "Please enter your name" />
+				<h:inputText id = "input1" value = "#{helloWorld.name}" required = "true">
                     <grv:groovyvalidator />
                 </h:inputText>
-                <h:commandButton id="button1" value="press me"
-					action="#{helloWorld.send}" />
+                <h:commandButton id = "button1" value = "press me" action = "#{helloWorld.send}" />
                 <grv:testcomponent />
-                <h:message id="message1" for="input1" />
-                <h:outputFormat value="#{testbean.xxx}"/>
-                <h:outputFormat value="#{javatestbean.sayHello}"/>
-                        <h:commandButton value="Press me dynamic" action="#{testbean.doit}"/>
+                <h:message id = "message1" for = "input1" />
+                <h:outputFormat value = "#{testbean.xxx}" />
+                <h:outputFormat value = "#{javatestbean.sayHello}" />
+                        <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
                         
             </h:panelGrid>
 		</h:form>
