https://issues.apache.org/jira/browse/EXTSCRIPT-7 added possible jar search paths and other classpaths which will be picked up by the java compiler
We probably wont need it for the groovy classloader since it calls everything at runtime hence shifts the dependency resolution from compile to runtime





git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@810947 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/src/main/webapp/javablog.xhtml
+++ b/examples/src/main/webapp/javablog.xhtml
@@ -10,6 +10,7 @@
 <ui:composition template = "/template.xhtml">
 
     <ui:define name = "body">
+        xxxx
         <h:form id = "form">
             <h:panelGrid id = "grid" columns = "1">
                 <h:outputText id = "title1" styleClass = "title" value = "#{javaBlogView.title}" />
@@ -26,7 +27,12 @@
                 <h:outputText value = "Content" /><h:inputText value = "#{javaBlogView.content}" />
 
 
-                <h:commandLink action = "#{javaBlogView.addEntry}" value = "Add Blog" />
+                <h:outputText value="#{javaBlogView.title3}" />
+
+                <h:outputText value="#{javaBlogView.title4}" />
+                
+
+                <h:commandLink action = "#{javaBlogView.addEntry2}" value = "Add Blog" />
             </h:panelGrid>
             <h:panelGrid columns = "1">
                 <h:outputText value = "Blog Entries" />
