http://issues.apache.org/jira/browse/EXTSCRIPT-12 project reorg
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@813355 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/src/main/webapp/page2.xhtml
+++ b/examples/src/main/webapp/page2.xhtml
@@ -13,6 +13,10 @@
 		<h:commandLink id = "link1" action = "back">
 			<h:outputText id = "linkText" value = "GO HOME" />
 		</h:commandLink>
+
+        <h:commandLink id = "link12" action = "xxx">
+			<h:outputText id = "linkText2" value = "GO HOME" />
+		</h:commandLink>
 	</h:form>
 </f:view>
 </body>
