https://issues.apache.org/jira/browse/EXTSCRIPT-26 reverting
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@826619 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -22,7 +22,7 @@
                 <h:outputFormat value = "#{testbean.xxx}" />
                 <h:outputFormat value = "#{javatestbean.sayHello}" />
                         <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
-                        
+                 <grv:testcomponent2 />
             </h:panelGrid>
 		</h:form>
 	</ui:define>
