converter now working 	new file:   examples/myfaces20-example/src/main/webapp/WEB-INF/java/org/apache/myfaces/javaloader/renderer/TestConverter1.java 	new file:   examples/myfaces20-example/src/main/webapp/WEB-INF/java/org/apache/myfaces/javaloader/renderer/TestConverter2.java 	new file:   examples/myfaces20-example/src/main/webapp/WEB-INF/java/org/apache/myfaces/javaloader/renderer/TestValidator1.java 	new file:   examples/myfaces20-example/src/main/webapp/WEB-INF/java/org/apache/myfaces/javaloader/renderer/TestValidator2.java 	modified:   examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@828753 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -21,6 +21,10 @@
                 <h:message id = "message1" for = "input1" />
                 <h:outputFormat value = "#{testbean.xxx}" />
                 <h:outputFormat value = "#{javatestbean.sayHello}" />
+                converter:
+                <h:inputText>
+                    <grv:testConverter1 />
+                </h:inputText>
                 <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
                  <grv:testcomponent2 />
             </h:panelGrid>
