https://issues.apache.org/jira/browse/EXTSCRIPT-26 converters and validators now working with annotations
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@830083 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -24,6 +24,7 @@
                 converter:
                 <h:inputText>
                     <grv:testConverter1 />
+                    <grv:testValidator1 />
                 </h:inputText>
                 <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
                  <grv:testcomponent2 />
