https://issues.apache.org/jira/browse/EXTSCRIPT-26 component annotation now done as well I will close this issue now I guess all the annotations work as expected
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@880781 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -28,6 +28,11 @@
                 </h:inputText>
                 <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
                  <grv:testcomponent2 />
+
+
+                Resource Handler Test:
+
+                <h:outputFormat value="#{javatestbean.resource}" />
             </h:panelGrid>
 		</h:form>
 	</ui:define>
