https://issues.apache.org/jira/browse/EXTSCRIPT-30 annotations on the groovy side should work now are not fully tested yet but first examples work
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@891288 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/blog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/blog.xhtml
@@ -30,11 +30,11 @@
             </h:panelGrid>
             <h:panelGrid columns = "1">
                 <h:outputText value = "Blog Entries" />
-                <t:dataList value = "#{blogService.blogEntries}" var = "item">
-
+                <ui:repeat value = "#{blogService.blogEntries}" var = "item">
+                    
                     <h:outputText value = "#{item.topic}" />
                     <h:outputText value = "#{item.content}" /><br />
-                </t:dataList>
+                </ui:repeat>
             </h:panelGrid>
 
         </h:form>
