--- a/examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -37,7 +37,7 @@
             <h:panelGrid columns = "1">
                 <h:outputText value = "Blog Entries" />
                 <ui:repeat value = "#{javaBlogService.blogEntries}" var = "item">
-
+                    xxx
                     <h:outputText value = "#{item.topic}" />
                     <h:outputText value = "#{item.content}" /><br />
                 </ui:repeat>
