--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -3,8 +3,13 @@
 <html xmlns = "http://www.w3.org/1999/xhtml" xmlns:ui = "http://java.sun.com/jsf/facelets"
       xmlns:f = "http://java.sun.com/jsf/core" xmlns:h = "http://java.sun.com/jsf/html">
 <head>
+
 <meta http-equiv = "Content-Type" content = "text/html; charset=iso-8859-1" />
 <title>Myfaces Example Facelets</title>
+
+ <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}" />
+
+
 </head>
 
 <body>
