--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -1,41 +1,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml" xmlns:ui = "http://java.sun.com/jsf/facelets"
-      xmlns:f = "http://java.sun.com/jsf/core" xmlns:h = "http://java.sun.com/jsf/html"
-      xmlns:grv = "http://myfaces.apache.org/groovy">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:grv="http://myfaces.apache.org/groovy">
 <head>
-<title>Hello World</title>
+    <title>Hello World</title>
 </head>
 <body>
-<ui:composition template = "/template.xhtml">
+<ui:composition template="/template.xhtml">
 
-	<ui:define name = "body">
-        <h:form id = "form">
-			<h:panelGrid id = "grid" columns = "2">
-				<h:outputText id = "output1" value = "Please enter your name" />
-				<h:inputText id = "input1" value = "#{helloWorld.name}" required = "true">
-                    <grv:groovyvalidator />
+
+    <ui:define name="body">
+        <h:form id="form">
+            <h:panelGrid id="grid" columns="2">
+                <h:outputText id="output1" value="Please enter your name"/>
+                <h:inputText id="input1" value="#{helloWorld.name}" required="true">
+                    <grv:groovyvalidator/>
                 </h:inputText>
-                <h:commandButton id = "button1" value = "press me" action = "#{helloWorld.send}" />
-                <grv:testcomponent />
-                <h:message id = "message1" for = "input1" />
-                <h:outputFormat value = "#{testbean.xxx}" />
-                <h:outputFormat value = "#{javatestbean.sayHello}" />
+                <h:commandButton id="button1" value="press me" action="#{helloWorld.send}"/>
+                <grv:testcomponent/>
+                <h:message id="message1" for="input1"/>
+                <h:outputFormat value="#{testbean.xxx}"/>
+                <h:outputFormat value="#{javatestbean.sayHello}"/>
                 converter:
                 <h:inputText>
-                    <grv:testConverter1 />
-                    <grv:testValidator1 />
+                    <grv:testConverter1/>
+                    <grv:testValidator1/>
                 </h:inputText>
-                <h:commandButton value = "Press me dynamic" action = "#{testbean.doit}" />
-                 <grv:testcomponent2 />
+                <h:commandButton value="Press me dynamic" action="#{testbean.doit}"/>
+                <grv:testcomponent2 testAttr="vvv" testAttr2="zzz"/>
 
 
                 Resource Handler Test:
 
-                <h:outputFormat value="#{javatestbean.resource}" />
+                <h:outputFormat value="#{javatestbean.resource}"/>
             </h:panelGrid>
-		</h:form>
-	</ui:define>
+
+
+        </h:form>
+    </ui:define>
 </ui:composition>
 </body>
 </html>
