--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -1,20 +1,33 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml" xmlns:ui = "http://java.sun.com/jsf/facelets"
-      xmlns:f = "http://java.sun.com/jsf/core" xmlns:h = "http://java.sun.com/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:grv = "http://myfaces.apache.org/groovy"
+      xmlns:h="http://java.sun.com/jsf/html">
 <head>
 
-<meta http-equiv = "Content-Type" content = "text/html; charset=iso-8859-1" />
-<title>Myfaces Example Facelets</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <title>Myfaces Example Facelets</title>
 
- <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}" />
+    <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}"/>
 
 
 </head>
 
 <body>
-<h1><ui:insert name = "title">Myfaces Example Facelets</ui:insert></h1>
-<p><ui:insert name = "body">Hello World Example!</ui:insert></p>
+<h:panelGroup>
+    <h3>
+        <h:outputFormat value="Compiler Output" escape="false"/>
+    </h3>
+    <grv:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
+</h:panelGroup>
+
+<h1>
+    <ui:insert name="title">Myfaces Example Facelets</ui:insert>
+</h1>
+<p>
+    <ui:insert name="body">Hello World Example!</ui:insert>
+</p>
 </body>
 
 </html>
