https://issues.apache.org/jira/browse/EXTSCRIPT-47 refactoring for the facelet patchup part
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@901794 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/template2.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template2.xhtml
@@ -13,9 +13,20 @@
 </head>
 
 <body>
+
+<h:panelGroup>
+    <h3>
+        <h:outputFormat value="Compiler Output" escape="false"/>
+    </h3>
+    <grv:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
+</h:panelGroup>
+
+
 <h1>
-    <ui:insert name="title">Myfaces Example Facelets</ui:insert>
+    <ui:insert name="title">Component Testcase</ui:insert>
 </h1>
+
+
 <p>
     <ui:insert name="body">Hello World Example!</ui:insert>
 </p>
