moving the componentOutput into its own taglib definition file
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@903370 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
@@ -9,7 +9,9 @@
 <body>
 <ui:composition template="/template2.xhtml">
     <ui:define name="body">
-        <grv:testcomponent2 testAttr="vvv" testAttr3="Attribute 3 set"/>
+        <!-- also we need to add some values here -->
+        <grv:testcomponent2 testAttr="vvv" testAttr3="Attribute 3 set"
+                            testAttr4="Attribute 4 set and showing"/>
     </ui:define>
 </ui:composition>
 </body>
