--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:grv = "http://myfaces.apache.org/groovy"
+      xmlns:exs = "http://myfaces.apache.org/ext-scripting"
       xmlns:h="http://java.sun.com/jsf/html">
 <head>
 
@@ -19,7 +19,7 @@
     <h3>
         <h:outputFormat value="Compiler Output" escape="false"/>
     </h3>
-    <grv:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
+    <exs:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
 </h:panelGroup>
 
 <h1>
