--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+<div class="centerDiv">
 <h:panelGroup>
     <h3>
         <h:outputFormat value="Compiler Output" escape="false"/>
@@ -28,6 +29,8 @@
 <p>
     <ui:insert name="body">Hello World Example!</ui:insert>
 </p>
+</div>
+
 </body>
 
 </html>
