https://issues.apache.org/jira/browse/EXTSCRIPT-52
styling works

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@904190 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/blog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/blog.xhtml
@@ -31,7 +31,7 @@
                     <h:inputText value="#{blogView.content}"/>
 
 
-                    <h:commandLink action="#{blogView.addEntry}" value="Add Blog"/>
+                    <h:commandLink action="#{blogView.addEntry}" value="Add Blog Entry"/>
                 </h:panelGrid>
             </h:panelGroup>
 
