--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -9,7 +9,11 @@
 <body>
 <ui:composition template="/template.xhtml">
     <ui:define name="body">
-        <h:form id="form" style="position: relative;">
+        <h1>
+            <ui:insert name="title">Ext-Scripting General Example</ui:insert>
+        </h1>
+
+        <h:form id="form" >
 
                 <h:panelGroup styleClass="left">
                     <h:panelGroup styleClass="stdBox">
