--- a/examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -10,48 +10,51 @@
 <ui:composition template="/template.xhtml">
 
     <ui:define name="body">
-        <h:form id="form" style="position: relative">
-            <h:panelGrid id="grid" columns="1" styleClass="stdBox left">
-                <h:outputText id="title1" styleClass="title" value="#{javaBlogView.title}"/>
-                <h:outputText id="title11" styleClass="title1" value="#{javaBlogView.title1}"/>
-                <!--
-                entry.firstName = firstName
-                entry.lastName = lastName
-                entry.topic = topic
-                entry.content = content
-            -->
-                <h:outputText value="First Name"/>
-                <h:inputText value="#{javaBlogView.firstName}"/>
-                <h:outputText value="Last Name"/>
-                <h:inputText value="#{javaBlogView.lastName}"/>
-                <h:outputText value="Topic of entry"/>
-                <h:inputText value="#{javaBlogView.topic}"/>
-                <h:outputText value="Content"/>
-                <h:inputText value="#{javaBlogView.content}"/>
+        <h1>
+            <ui:insert name="title">Ext-Scripting Javablog Example</ui:insert>
+        </h1>
 
+        <h:form id="form" >
 
-                <h:outputText value="#{javaBlogView.title3}"/>
+            <div class="left" style="margin-top: 3px;">
+                <h:panelGrid id="grid" columns="1" styleClass="stdBox">
+                    <h:outputText id="title1" styleClass="title" value="#{javaBlogView.title}"/>
+                    <h:outputText id="title11" styleClass="title1" value="#{javaBlogView.title1}"/>
+                    <h:outputText value="#{javaBlogView.title3}"/>
+                    <h:outputText value="#{javaBlogView.title4}"/>
 
-                <h:outputText value="#{javaBlogView.title4}"/>
+                    <hr/>
 
-
-                <h:commandLink action="#{javaBlogView.addEntry2}" value="Add Blog"/>
-            </h:panelGrid>
-            <h:panelGrid columns="1" styleClass="right">
-                <h:panelGroup>
-                    <h3>
-                        <h:outputText value="Blog Entries"/>
-                    </h3>
-                </h:panelGroup>
-                <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
-                    <h:panelGrid columns="2" styleClass="stdBox">
-                        <h:outputLabel value="Topic"/>
-                        <h:outputText value="#{item.topic}"/>
-                        <h:outputLabel value="Content"/>
-                        <h:outputText value="#{item.content}"/>
-
+                    <h:panelGrid columns="2" columnClasses="label, input">
+                        <h:outputText value="First Name"/>
+                        <h:inputText value="#{javaBlogView.firstName}"/>
+                        <h:outputText value="Last Name"/>
+                        <h:inputText value="#{javaBlogView.lastName}"/>
+                        <h:outputText value="Topic of entry"/>
+                        <h:inputText value="#{javaBlogView.topic}"/>
                     </h:panelGrid>
-                    <br />
+                    <h:panelGrid columns="2" columnClasses="label, input">
+                        <h:outputText styleClass="label" value="Content"/>
+                        <h:inputTextarea  value="#{javaBlogView.content}"/>
+                    </h:panelGrid>
+                    <hr/>
+                    <h:commandButton styleClass="btn" action="#{javaBlogView.addEntry2}" value="Add Blog Entry"/>
+                </h:panelGrid>
+            </div>
+
+            <h:panelGrid columns="1" styleClass="right">
+                <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
+                    <h:panelGrid columns="1" styleClass="stdBox">
+                        <h:panelGroup styleClass="topic">
+                            <h:outputLabel styleClass="label" value="Topic"/>
+                            <h:outputText value="#{item.topic}"/>
+                        </h:panelGroup>
+                        <h:panelGroup styleClass="content">
+                            <h:outputLabel styleClass="label" value="Content"/>
+                            <h:outputFormat escape="false" value="#{item.content}"/>
+                        </h:panelGroup>
+                    </h:panelGrid>
+                    <br/>
                 </ui:repeat>
             </h:panelGrid>
 
