https://issues.apache.org/jira/browse/EXTSCRIPT-52 final layout for the blog now done for the jsf2 part
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@904266 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/blog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/blog.xhtml
@@ -42,7 +42,7 @@
 
             <h:panelGrid columns="1" styleClass="right">
                 <ui:repeat value="#{blogService.blogEntries}" var="item">
-                    <h:panelGrid columns="1" styleClass="stdBox">
+                    <h:panelGrid columns="1" styleClass="messageBox">
                         <h:panelGroup styleClass="topic">
                             <h:outputLabel styleClass="label" value="Topic"/>
                             <h:outputText value="#{item.topic}"/>
