--- a/examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -10,6 +10,9 @@
 <ui:composition template="/template.xhtml">
 
     <ui:define name="body">
+
+        
+
         <h1>
             <ui:insert name="title">Ext-Scripting Javablog Example</ui:insert>
         </h1>
@@ -44,7 +47,7 @@
 
             <h:panelGrid columns="1" styleClass="right">
                 <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
-                    <h:panelGrid columns="1" styleClass="stdBox">
+                    <h:panelGrid columns="1" styleClass="messageBox">
                         <h:panelGroup styleClass="topic">
                             <h:outputLabel styleClass="label" value="Topic"/>
                             <h:outputText value="#{item.topic}"/>
