https://issues.apache.org/jira/browse/EXTSCRIPT-58
done we have a somewhat dirty solution but it works for now...

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@905378 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -19,6 +19,7 @@
                     <h:panelGroup styleClass="stdBox">
                         <h3>Validator Test 1</h3>
                         <h:outputText id="output1" value="Please enter your name"/>
+                        <h:outputText value="aaa#{javatestbean4.hello}" />
                         <h:inputText id="input1" value="#{helloWorld.name}" required="true">
                             <grv:groovyvalidator/>
                         </h:inputText>
