https://issues.apache.org/jira/browse/EXTSCRIPT-58
preparations for svn push

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@905381 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
@@ -11,6 +11,7 @@
     <ui:define name="body">
         <!-- also we need to add some values here -->
         <h:form>
+            <f:event name="postAddToView" listener="#{javatestbean.doPageInitStuff}"/>
 
             <h:commandLink style="color: white;" value="press me" action="#{javatestbean.doAction}"/>
             <grv:testcomponent2 testAttr="vvv" testAttr3="Attribute 3 set"
