adding apache headers wherever missing
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@908251 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -23,6 +23,8 @@
                         <h:inputText id="input1" value="#{helloWorld.name}" required="true">
                             <grv:groovyvalidator/>
                         </h:inputText>
+                        
+                        <h:outputText value="#{testbean5.helloWorld}" />
                         <h:commandButton id="button1" value="press me" action="#{helloWorld.send}"/>
                     </h:panelGroup>
                     <h:panelGroup styleClass="stdBox">
