https://issues.apache.org/jira/browse/EXTSCRIPT-65
finalizing the package whitelisting

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@910607 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/blog.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/blog.xhtml
@@ -18,8 +18,8 @@
 
             <div class="left" style="margin-top: 3px;">
                 <h:panelGrid id="grid" columns="1" styleClass="stdBox">
-                    <h:outputText id="title1" styleClass="title" value="#{javaBlogView.title}"/>
-                    <h:outputText id="title11" styleClass="title1" value="#{javaBlogView.title1}"/>
+                    <h:outputText id="title1" styleClass="title" value="#{blogView.title}"/>
+                    <h:outputText id="title11" styleClass="title1" value="#{blogView.title1}"/>
 
                     <hr/>
 
