--- a/examples/myfaces12-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces12-example/src/main/webapp/helloWorld.xhtml
@@ -11,8 +11,12 @@
 
     <ui:define name="body">
         <h:form id="form">
+
+
+
             <h:panelGroup styleClass="left">
                 <h:panelGroup styleClass="stdBox">
+                    <h:messages />
                     <h3>Validator Test 1</h3>
                     <h:outputText id="output1" value="Please enter your name"/>
                     <h:inputText id="input1" value="#{helloWorld.name}" required="true">
