--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -14,9 +14,10 @@
         </h1>
 
         <h:form id="form">
-
             <h:panelGroup styleClass="left">
                 <h:panelGroup styleClass="stdBox">
+                    <h:messages />
+
                     <h3>Validator Test 1</h3>
                     <h:outputText id="output1" value="Please enter your name"/>
                     <h:outputText value="aaa#{javatestbean4.hello}"/>
@@ -41,6 +42,7 @@
                 </h:panelGroup>
                 <h:panelGroup styleClass="stdBox">
                     <h3>Converter Test 1</h3>
+                    please insert "hello world" into the input field
                     <h:inputText>
                         <grv:testConverter1/>
                         <grv:testValidator1/>
