adding a top navigation to our example to reache the other examples faster
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@911420 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -15,10 +15,22 @@
 </head>
 
 <body>
+<div id="menu">
+    <h:panelGroup>
+        <h:outputLink value="./helloWorld.jsf">Hello world Example</h:outputLink>
+        <h:outputLink value="./blog.jsf">Groovy Blogging Example</h:outputLink>
+        <h:outputLink value="./javablog.jsf">Java Blogging Example</h:outputLink>
+        <h:outputLink value="./componentTest.jsf">Component Testcase</h:outputLink>
+        <h:outputLink value="./compilerWindow.jsf" target="_blank">Compiler Output</h:outputLink>
+
+    </h:panelGroup>
+</div>
+
 <div id="backGroundFloat">
 
 </div>
 <div class="centerDiv">
+
     <h:panelGroup>
         <h3>
             <h:outputFormat value="Compiler Output" escape="false"/>
