--- a/examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
@@ -9,14 +9,27 @@
 <body>
 <ui:composition template="/template.xhtml">
     <ui:define name="body">
+        <style type="text/css">
+            div#menu {
+                display: none;
+            }
+
+
+            div.centerDiv {
+                width: auto;
+            }
+            div.errorBox {
+                width: auto;
+            }
+
+            div.errorBox .line {
+                width: auto;
+            }
+        </style>
         <!-- also we need to add some values here -->
         <div class="centerDiv">
             <h:form>
-                <h:panelGroup styleClass="stdBoxBig">
-                    <h:commandLink style="color: white;" value="press me" action="#{javatestbean.doAction}"/>
-                    <grv:testcomponent2 testAttr="vvv" testAttr3="Attribute 3 set"
-                                        testAttr4="Attribute 4 set and showing"/>
-                </h:panelGroup>
+                <h:commandButton value="Refresh compiler output"></h:commandButton>
             </h:form>
         </div>
     </ui:define>
