save state of affairs... from testing against eclipse
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@911435 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
@@ -29,7 +29,7 @@
         <!-- also we need to add some values here -->
         <div class="centerDiv">
             <h:form>
-                <h:commandButton value="Refresh compiler output"></h:commandButton>
+                <h:outputLink style="margin-left: 10px; color: white; font-weight: bold;" value="./compilerWindow.jsf" >Refresh Compiler output &gt;&gt;</h:outputLink>
             </h:form>
         </div>
     </ui:define>
