https://issues.apache.org/jira/browse/EXTSCRIPT-68 https://issues.apache.org/jira/browse/EXTSCRIPT-69
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@911860 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -54,7 +54,7 @@
                 </h:panelGroup>
                 <h:panelGroup styleClass="stdBox">
                     <h3>Java Component</h3>
-                    <grv:testcomponent2 testAttr="vvv" testAttr2="zzz"/>
+                    <grv:testcomponent2 testAttr="testAttributeValue" testAttr2="testAttribute2Value"/>
                 </h:panelGroup>
             </h:panelGroup>
 
